@@ -11,10 +11,13 @@ import java.nio.file.Path;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.time.Duration;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 //noinspection SqlNoDataSourceInspection,SqlResolve
@@ -23,8 +26,56 @@ class DatabaseLockProcessTest {
     Path temporaryDirectory;
 
     @Test
+    void sameJvmReadersOverlapAndReleaseTheSharedOperatingSystemLock() throws Exception {
+        Path database = temporaryDirectory.resolve("symbols.mv.db");
+        var acquired = new CountDownLatch(2);
+        var release = new CountDownLatch(1);
+        try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+            var first = executor.submit(() -> holdRead(database, acquired, release));
+            var second = executor.submit(() -> holdRead(database, acquired, release));
+            assertTrue(acquired.await(2, TimeUnit.SECONDS));
+            assertThrows(java.io.IOException.class, () -> {
+                try (var unexpected = DatabaseLock.write(database, Duration.ofMillis(100))) {
+                    assertTrue(unexpected.isHeld(), "writer acquired while readers held the shared lock");
+                    throw new AssertionError("writer acquired while readers held the shared lock");
+                }
+            });
+            release.countDown();
+            first.get(2, TimeUnit.SECONDS);
+            second.get(2, TimeUnit.SECONDS);
+        }
+        try (var writer = DatabaseLock.write(database, Duration.ofSeconds(1))) {
+            assertTrue(writer.isHeld());
+        }
+    }
+
+    @Test
+    void twoReaderProcessesOverlapBeforeEitherBlocksAWritingProcess() throws Exception {
+        Path database = temporaryDirectory.resolve("symbols.mv.db");
+        Process first = process("hold-read", database);
+        Process second = process("hold-read", database);
+        try (var firstOutput = new BufferedReader(new InputStreamReader(first.getInputStream(), StandardCharsets.UTF_8)); var secondOutput = new BufferedReader(new InputStreamReader(second.getInputStream(), StandardCharsets.UTF_8))) {
+            assertEquals("locked", firstOutput.readLine());
+            assertEquals("locked", secondOutput.readLine());
+            assertThrows(java.io.IOException.class, () -> {
+                try (var unexpected = DatabaseLock.write(database, Duration.ofMillis(100))) {
+                    assertTrue(unexpected.isHeld(), "writer acquired while reader processes held the shared lock");
+                    throw new AssertionError("writer acquired while reader processes held the shared lock");
+                }
+            });
+            first.getOutputStream().close();
+            second.getOutputStream().close();
+            assertTrue(first.waitFor(5, TimeUnit.SECONDS));
+            assertTrue(second.waitFor(5, TimeUnit.SECONDS));
+        } finally {
+            stop(first);
+            stop(second);
+        }
+    }
+
+    @Test
     void aRealReaderProcessBlocksAnExclusiveWriterUntilItExits() throws Exception {
-        Path database = temporaryDirectory.resolve("symbols.db");
+        Path database = temporaryDirectory.resolve("symbols.mv.db");
         Process process = process("hold-read", database);
         try (var reader = new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8))) {
             assertEquals("locked", reader.readLine());
@@ -39,7 +90,7 @@ class DatabaseLockProcessTest {
             assertTrue(process.waitFor(5, TimeUnit.SECONDS));
             try (var lock = DatabaseLock.write(database, Duration.ofSeconds(1))) {
                 assertTrue(lock.isHeld());
-                assertTrue(Files.exists(database.resolveSibling("symbols.db.lock")));
+                assertTrue(Files.exists(database.resolveSibling("symbols.mv.db.lock")));
             }
         } finally {
             stop(process);
@@ -48,17 +99,17 @@ class DatabaseLockProcessTest {
 
     @Test
     void aRealQueryProcessReleasesAllWindowsHandlesBeforeRename() throws Exception {
-        Path database = temporaryDirectory.resolve("symbols.db");
-        try (Connection connection = DriverManager.getConnection("jdbc:sqlite:" + database.toAbsolutePath());
+        Path database = temporaryDirectory.resolve("symbols.mv.db");
+        try (Connection connection = DriverManager.getConnection(H2DatabaseUrls.writer(database));
              var statement = connection.createStatement()) {
-            statement.execute("CREATE TABLE marker (value TEXT)");
+            statement.execute("CREATE TABLE marker (marker_value VARCHAR)");
             //noinspection SqlNoDataSourceInspection,SqlResolve
-            statement.execute("INSERT INTO marker VALUES ('value')");
+            statement.execute("INSERT INTO marker(marker_value) VALUES ('value')");
         }
         Process process = process("query-and-close", database);
         try (var reader = new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8))) {
             assertEquals("closed", reader.readLine());
-            Path renamed = temporaryDirectory.resolve("renamed.db");
+            Path renamed = temporaryDirectory.resolve("renamed.mv.db");
             Files.move(database, renamed);
             assertTrue(Files.exists(renamed));
             process.getOutputStream().close();
@@ -70,14 +121,15 @@ class DatabaseLockProcessTest {
 
     @Test
     void aRealRecoveryProcessRestoresTheBackupWhenTheTargetIsMissing() throws Exception {
-        Path database = temporaryDirectory.resolve("symbols.db");
-        Path backup = database.resolveSibling("symbols.db.bak");
-        try (Connection connection = DriverManager.getConnection("jdbc:sqlite:" + backup.toAbsolutePath());
+        Path database = temporaryDirectory.resolve("symbols.mv.db");
+        Path backup = database.resolveSibling("symbols.mv.db.bak");
+        try (Connection connection = DriverManager.getConnection(H2DatabaseUrls.writer(database));
              var statement = connection.createStatement()) {
-            statement.execute("CREATE TABLE marker (value TEXT)");
+            statement.execute("CREATE TABLE marker (marker_value VARCHAR)");
             //noinspection SqlNoDataSourceInspection,SqlResolve
-            statement.execute("INSERT INTO marker VALUES ('old')");
+            statement.execute("INSERT INTO marker(marker_value) VALUES ('old')");
         }
+        Files.move(database, backup);
 
         Process process = process("recover-failing", database);
         try (var reader = new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8))) {
@@ -96,13 +148,23 @@ class DatabaseLockProcessTest {
         String classpath = System.getProperty("java.class.path");
         return new ProcessBuilder(
                         java,
-                        "--enable-native-access=ALL-UNNAMED",
                         "-cp",
                         classpath,
                         DatabaseLockProcessMain.class.getName(),
                         mode,
                         database.toString())
                 .start();
+    }
+
+    private static Void holdRead(Path database, CountDownLatch acquired, CountDownLatch release) throws Exception {
+        try (var lock = DatabaseLock.read(database, Duration.ofSeconds(1))) {
+            assertTrue(lock.isHeld());
+            acquired.countDown();
+            if (!release.await(2, TimeUnit.SECONDS)) {
+                throw new AssertionError("test did not release same-JVM readers");
+            }
+        }
+        return null;
     }
 
     private static void stop(Process process) throws Exception {
